feat: implement JWT Algorithm Whitelist with SignatureAlgorithmPreferences
BREAKING CHANGE: JWT tokens using weak algorithms (HS256, HS384, HS512, none) are now rejected for security

## Key Features

### Security Enhancements
- **Algorithm Validation**: Validates JWT algorithm before token processing to prevent algorithm substitution attacks
- **Secure Defaults**: Uses cryptographically sound defaults from SignatureAlgorithmPreferences library
  - Preferred order: ES512, ES384, ES256, PS512, PS384, PS256, RS512, RS384, RS256
- **Automatic Rejection**: Weak algorithms (HS256, HS384, HS512, none) are automatically rejected
- **Configuration Support**: ALLOWED_ALGORITHMS property allows custom algorithm lists while maintaining security

### Implementation Details
- **Library Integration**: Uses `de.cuioss.jwt.validation.security.SignatureAlgorithmPreferences`
- **Early Validation**: Algorithm check runs before expensive token validation operations
- **Comprehensive Error Handling**: Proper EventTypes and ErrorContext for security events
- **Future-Proof**: Algorithm preferences managed by specialized security library

### Code Changes
- **MultiIssuerJWTTokenAuthenticator.java**: Added validateTokenAlgorithm() method with SignatureAlgorithmPreferences integration
- **JWTProcessorConstants.java**: Updated ALLOWED_ALGORITHMS property with secure defaults
- **Test Updates**: Fixed test expectations to account for algorithm validation (HS256 tokens now properly rejected)

## Security Benefits
- Prevents algorithm downgrade attacks where attackers try to force weaker algorithms
- Cryptographically sound defaults maintained by security experts
- Enhanced logging for security events and algorithm validation failures
- Consistent with industry security best practices

## Testing
- All unit tests pass (82 tests)
- Pre-commit build successful
- E2E tests run successfully (JWT algorithm validation working correctly)
- Updated test expectations to reflect new security behavior

🤖 